# aurora

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  init-env.sh  package-lock.json  package.json  pnpm-lock.yaml
.cursor/rules/: agent.mdc  api-error-shape.mdc  git-commits.mdc  inline-documentation.mdc  plan-execution.mdc  project-layout.mdc
.githooks/: commit-msg
.github/workflows/: ci.yml  migrations.yml
assets/: README.md  SKILL.md  colors_and_type.css
assets/preview/: _card.css  brand.html  buttons.html  cards.html  colors-primary.html  colors-semantic.html  colors-surface.html  inputs.html  network-bg.html  player-bar.html  radii.html  shadow-glass.html  spacing.html  type-inter.html  (+1 more)
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_init.sql  002_indexes.sql
backend/migrations/postgres/: 001_init.sql  003_permissions.sql  004_settings.sql  005_add_studio.sql  006_add_enabled.sql  007_multi_genre.sql  008_add_hls_columns.sql  009_add_conversion_progress.sql  010_add_history_song_index.sql  012_add_listening_stats.sql  013_add_stats_permission.sql  014_add_hls_encode_status.sql  015_search_index_queue.sql  016_song_lyrics.sql
backend/migrations/sqlite/: 001_init.sql  002_indexes.sql  003_permissions.sql  007_multi_genre.sql  008_add_hls_columns.sql  009_add_conversion_progress.sql  010_add_history_song_index.sql  011_add_user_enabled.sql  012_add_listening_stats.sql  013_add_stats_permission.sql  014_add_hls_encode_status.sql  015_search_index_queue.sql  016_song_lyrics.sql  017_songs_enabled_indexes.sql
backend/src/: app_settings.rs  config.rs  db.rs  error.rs  health.rs  lib.rs  main.rs  rate_limit.rs  redact.rs  secrets.rs  stream_ticket.rs
backend/src/admin/: artwork_migration.rs  handlers.rs  hls_handlers.rs  mod.rs  upload.rs
backend/src/artwork/: mod.rs
backend/src/auth/: enabled_cache.rs  handlers.rs  mod.rs
backend/src/hls/: encode_job.rs  encoder.rs  handlers.rs  key_store.rs  mod.rs  playlist.rs
backend/src/lyrics/: handlers.rs  mod.rs  model.rs
backend/src/permissions/: handlers.rs  mod.rs
backend/src/playlists/: handlers.rs  mod.rs  model.rs
backend/src/search/: handlers.rs  indexer.rs  mod.rs  sync_queue.rs
backend/src/setup/: env_persist.rs  handlers.rs  mod.rs
backend/src/songs/: date_dialect.rs  handlers.rs  limits.rs  mod.rs  model.rs  scanner.rs
backend/src/storage/: mod.rs  nebula.rs
backend/tests/: admin_listening_query_deser.rs  admin_listening_route.rs  migration_parity.rs  playlist_reorder_transaction.rs  rate_limit_routes.rs  security_audit_regressions.rs  setup_database.rs  stream_ticket_disabled_song.rs
docs/: HLS-AUTH.md  improvements-backlog.md  permissions.md  security-audit.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
nebula-os/: .env.example  Cargo.toml  Dockerfile
(+125 files in other folders)
