[package]
name = "aurora-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "aurora_backend"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres", "sqlite", "migrate", "uuid", "chrono"] }

lofty = "0.22"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

jsonwebtoken = "9"
argon2 = "0.5"
password-hash = { version = "0.5", default-features = false }
rand = "0.8"

utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "2"
anyhow = "1"

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
envy = "0.4"
dotenvy = "0.15"

hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
meilisearch-sdk = "0.27"

walkdir = "2"
mime_guess = "2"
bytes = "1"
futures-util = "0.3"
aes-gcm = "0.10"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["full"] }
serde_urlencoded = "0.7"
tempfile = "3"
